--- a/nvidia/multi-agent-chatbot/assets/backend/pyproject.toml
+++ b/nvidia/multi-agent-chatbot/assets/backend/pyproject.toml
@@ -15,9 +15,11 @@ dependencies = [
     "langchain-unstructured>=0.1.6",
     "langgraph>=0.6.0",
     "mcp>=0.1.0",
+    "numpy>=1.24.0",
+    "opencv-python-headless>=4.8.0",
     "pydantic>=2.11.7",
     "pypdf2>=3.0.1",
-    "python-dotenv>=1.1.1",
+    "python-dotenv>=1.0.0",
     "python-multipart>=0.0.20",
     "asyncpg>=0.29.0",
     "requests>=2.28.0",
