--- a/nvidia/multi-agent-chatbot/assets/backend/pyproject.toml
+++ b/nvidia/multi-agent-chatbot/assets/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pypdf2>=3.0.1",
     "python-dotenv>=1.0.0",
     "python-multipart>=0.0.20",
+    "apscheduler>=3.10.4",
     "asyncpg>=0.29.0",
     "requests>=2.28.0",
     "unstructured[pdf]>=0.18.11",
