--- a/nvidia/multi-agent-chatbot/assets/docker-compose.yml
+++ b/nvidia/multi-agent-chatbot/assets/docker-compose.yml
@@ -63,8 +63,13 @@ services:
       - POSTGRES_DB=chatbot
       - POSTGRES_USER=chatbot_user
       - POSTGRES_PASSWORD=chatbot_password
+      # Additional databases created via init script
+      - N8N_DB=n8n
+      - N8N_USER=n8n
+      - N8N_PASSWORD=n8n_password
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U chatbot_user -d chatbot"]
       interval: 30s
@@ -126,9 +131,67 @@ services:
       - "etcd"
       - "minio"
 
+  deepseek-ocr:
+    container_name: deepseek-ocr
+    build:
+      context: ./deepseek-ocr
+      dockerfile: Dockerfile
+    ports:
+      - "8100:8000"
+    volumes:
+      - ./deepseek-ocr/DeepSeek-OCR-model:/app/DeepSeek-OCR-model:ro
+    environment:
+      - MODEL_PATH=/app/DeepSeek-OCR-model
+      - PORT=8000
+      - HOST=0.0.0.0
+    shm_size: 8gb
+    restart: unless-stopped
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+
+  n8n:
+    container_name: n8n
+    image: docker.io/n8nio/n8n:latest
+    ports:
+      - "5678:5678"
+    environment:
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=n8n
+      - DB_POSTGRESDB_PASSWORD=n8n_password
+      - N8N_HOST=${N8N_HOST:-localhost}
+      - WEBHOOK_URL=${WEBHOOK_URL:-https://localhost}
+      - NODE_ENV=production
+      - N8N_PROTOCOL=http
+      - N8N_PORT=5678
+      - N8N_SECURE_COOKIE=false
+      - GENERIC_TIMEZONE=${TIMEZONE:-UTC}
+      - N8N_ENCRYPTION_KEY=${N8N_ENCRYPTION_KEY:-}
+    volumes:
+      - n8n_data:/home/node/.n8n
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: '0.5'
+        reservations:
+          memory: 512M
+
 
 volumes:
   postgres_data:
+  n8n_data:
 
 networks:
   default:
