--- a/nvidia/multi-agent-chatbot/assets/backend/pyproject.toml
+++ b/nvidia/multi-agent-chatbot/assets/backend/pyproject.toml
@@ -24,4 +24,8 @@ dependencies = [
     "unstructured[pdf]>=0.18.11",
     "uvicorn>=0.35.0",
     "websockets>=15.0.1",
+    "pymilvus>=2.5,<2.6",
+    "python-docx",
+    "pypdf",
+    "fastmcp",
 ]
